--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "",
+  "name": "streamifi-userinfo-broadcast",
   "version": "",
-  "description": "",
+  "description": "FEC Streamifi",
   "author": "",
   "license": "",
   "engines": {
     "node": ">=6.13.0"
   },
-  "scripts": {},
+  "scripts": {
+    "build:react": "webpack -d --watch",
+    "start": "nodemon server/index.js"
+  },
   "dependencies": {
+    "babel": "^6.23.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
+    "nodemon": "^2.0.2",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
     "babel-jest": "^25.1.0",
@@ -19,7 +28,13 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "^25.1.0"
   }
 }
