--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jest-enzyme": "^7.1.2",
     "jquery": "^3.4.1",
     "nodemon": "^2.0.2",
     "react": "^16.13.0",
