--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "nodemon server/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --colors"
+    "test:coverage": "jest --coverage --colors",
+    "seed": "node seed.js"
   },
   "dependencies": {
     "@babel/preset-env": "^7.8.7",
@@ -21,6 +22,7 @@
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "jest-enzyme": "^7.1.2",
     "jquery": "^3.4.1",
     "mongodb": "^3.5.5",
