--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors",
-    "seed": "node seed.js"
+    "seed": "node ./db/seed.js"
   },
   "dependencies": {
     "@babel/preset-env": "^7.8.7",
